trunk/Archive2/85/06d2e08591cfe1/output
main.cpp: In function 'int main()':
main.cpp:15:10: error: no matching function for call to 'foo(int)'
     foo(0);
          ^
main.cpp:15:10: note: candidate is:
main.cpp:10:48: note: template<class T> typename T::internalType foo(const T&)
 template <typename T> typename T::internalType foo(const T& t) { std::cout << "foo<T>" << std::endl; return 0; }
                                                ^
main.cpp:10:48: note:   template argument deduction/substitution failed:
main.cpp: In substitution of 'template<class T> typename T::internalType foo(const T&) [with T = int]':
main.cpp:15:10:   required from here
main.cpp:10:48: error: 'int' is not a class, struct, or union type
